24-02-29 | 박검지 | toast 수정 및 aicc / map 팀장님 작업 데이터 옮기기

--- a/src/main/resources/templates/thymeleaf/Member/FindPw.html
+++ b/src/main/resources/templates/thymeleaf/Member/FindPw.html
@@ -5,12 +5,13 @@
 
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
-	<!-- addMember 페이지 -->
+	<!-- 토스트 -->
+	<div th:replace="~{alert/toast::div}"></div>
 	<div class="container addMember_wrap">
 		<div class="row my-5">
 			<form action="/FindPwAction" method="post">
 				<div class="col-md-8 col-lg-7 col-xl-5 mx-auto my-5">
-					<div class="row g-3 addMember_form p-4 rounded-5 shadow-sm my-5 px-5">
+					<div class="row g-3 addMember_form p-4 rounded-5 shadow-s my-5 px-5">
 						<h3>비밀번호 찾기</h3>
 						<div class="col-12">
 							<div class="form-floating">
@@ -37,7 +38,7 @@
 							<button type="submit" class="btn btn-main w-100 p-3 rounded-4">비밀번호 찾기</button>
 							<div class="row mt-2">
 								<div class="col my-3 d-flex justify-content-around">
-									<a href="addMember" class="text-decoration-none">회원 가입 </a> | <a
+									<a href="addMember" class="text-decoration-none">회원 가입 </a> <span class="text-muted">|</span> <a
 										href="FindId" class="text-decoration-none text-dark">아이디 찾기</a>
 								</div>
 							</div>
@@ -58,8 +59,12 @@
             // 메시지가 존재할 경우 경고창으로 표시
             if (msg !== null && msg !== "") {
             	if(msg == 1){
-                alert("그런 정보 없는데요...");
+            		message = "정보를 다시 확인해주세요.";
             	}
+            	
+            	 // 부트스트랩 toast 트리거
+                $('.my-toast-body').text(message);
+                $('.my-toast').toast('show');
             }
         });
     </script>
