--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -749,6 +749,7 @@
             if (msg !== null && msg !== "") {
                 let message;
                 if(msg == 1){
+                	$('#warnImg').hide();
                     message = name+"님 환영합니다 🖐";
                 }
                 
