--- a/src/main/resources/templates/alert/toast.html
+++ b/src/main/resources/templates/alert/toast.html
@@ -1,10 +1,13 @@
 <!-- toast -->
 <div aria-live="polite" aria-atomic="true"
-	class="my-toast-parent position-absolute d-flex justify-content-center align-items-center w-100 pt-5">
-	<div class="toast my-toast rounded-pill shadow-sm" role="alert"
+	class="fixed-top my-toast-parent d-flex justify-content-center align-items-center w-100 pt-5 mt-5">
+	<div class="toast my-toast rounded-4" role="alert"
 		aria-live="assertive" data-bs-delay="5000" aria-atomic="false">
-		<div class="d-flex">
-			<div class="my-toast-body toast-body m-auto">
+		<div class="d-flex hstack m-auto justify-content-center p-3 gap-2 shadow-s rounded-4">
+			<div class="hstack" id="warnImg"> 
+				<img src="../img/mypage/crisis.png" class="m-auto" width="21" height="21" alt="" />
+			</div>
+			<div class="my-toast-body toast-body f16 text-dark p-0">
 				<!-- 알람 메세지는 script -->
 			</div>
 		</div>
