--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -1,134 +1,157 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nav</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/common.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Nav</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+	crossorigin="anonymous">
+<link rel="stylesheet" href="css/common.css">
 <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-<nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white shadow-sm" th:fragment="nav">
-  <div class="row container-fluid px-0">
-    <!-- Logo 좌측 -->
- <a class="col navbar-brand" href="home"> <img src="../img/nav/carrier.jpg" alt="" class="mb-2" style="width: 100px;"></a>
-    <!--M nav btn-->
-    <button class="col-2 ml-auto navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- nav content -->
-    <div class="px-0 col-8 d-lg-flex justify-content-between justify-content-lg-end mx-auto collapse navbar-collapse"
-         id="navbarSupportedContent">
-      <!-- nav 중앙 -->
-      <div class="col-12 col-md-6 flex-grow-1 px-lg-5">
-        <ul class="px-lg-5 mb-0 navbar-nav justify-content-around mb-lg-0 f17 px-4 bg-white rounded-bottom ">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="home">홈</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="feed">피드</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="aicc">AI 돋보기</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="band">밴드</a>
-          </li>
-          <li class="nav-item dropdown">
-          <a class="nav-link" href="info" role="button" data-bs-toggle="dropdown" aria-expanded="false">여행정보</a>
-          <ul  class="dropdown-menu">
-          <li> <a class="dropdown-item" href="info">여행정보</a></li>
-          <li> <a class="dropdown-item" href="infoCourse">여행코스</a></li>
-          </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mb-3 mb-md-0" href="map">지도</a>
-          </li>
-          <th:block th:if="${session.Member_Id == null}">
-          <li class="nav-item d-md-none">
-            <a class="nav-link mb-3 mb-md-0" href="로그인">로그인</a>
-          </li>
-           </th:block>
-            <th:block th:unless="${session.Member_Id == null}">
-          <li class="nav-item d-md-none">
-            <a class="nav-link mb-3 mb-md-0" href="마이페이지">마이페이지</a>
-          </li>
-           </th:block>
-        </ul>
-      </div>
-      <!-- nav 우측 -->
-      <div class="col nav-right d-flex align-items-center p-0 me-2">
-        <!-- lg 화면 이상에서 보일 영역 -->
-        <div class="col-12 d-none d-xl-flex justify-content-around align-items-center p-0 me-2">
-          <!-- 서치 영역-->
-          <div class="col-10 float-end nav-search-form">
-            <form action="info_search" class="d-flex align-items-center" role="search">
-              <input class="form-control" type="search" placeholder="어디로, 어떤 여행을 떠날 예정인가요?" aria-label="Search" name="key">
-              <button class="nav-right-btn navbar-search-lg" type="submit">Search</button>
-            </form>
-          </div>
-          <!----- 로그인 / 마이페이지 영역 ----->
-          <!-- 로그인 -->
-          <th:block th:if="${session.Member_Id == null}">
-	          <a th:href="@{login}" class="float-end navbar-user nav-right-btn nav-right-btn-img">로그인</a>
-          </th:block>
-          <!-- 마이페이지 -->
-          <th:block th:unless="${session.Member_Id == null}">
-	          <a th:href="@{'mypage?id='+${session.Member_Id}}" class="nav-right-btn">
-	          	<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="rounded-circle img-fluid nav-right-btn-img float-end" alt="...">
-	          </a>
-          </th:block>
-        </div>
-        <!-- md 화면에서만 보일 영역 -->
-        	<div class="d-flex">
-        <div class="col d-none d-md-block d-xl-none">
-        	    <!----- 로그인 / 마이페이지 영역 ----->
-          		<!-- 로그인 -->
-	        	<th:block th:if="${session.Member_Id == null}">
-		          <a th:href="@{login}" class="float-end nav-right-btn nav-right-btn-img navbar-user">로그인</a>
-	          	</th:block>
-	          	<!-- 마이페이지 -->
-	          	<th:block th:unless="${session.Member_Id == null}">
-		          <a th:href="@{'mypage?id='+${session.Member_Id}}" class="float-end nav-right-btn">
-		          	<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="rounded-circle img-fluid nav-right-btn-img float-end" alt="...">
-		          </a>
-	          	</th:block>
-	          	<!-- 검색 -->
-	          	<a href="#" class="float-end nav-right-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-	          		<span class="navbar-search-md nav-right-btn-img me-2 " id="searchmove" >
-	          		
-	          		</span>
-	          	</a>
-	          	<!-- Modal -->
-<div class="modal " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
-  <div class="modal-dialog modal-fullscreen-sm-down">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-        	</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-</nav>
+	<nav
+		class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white shadow-sm"
+		th:fragment="nav">
+		<div class="row container-fluid px-0">
+			<!-- Logo 좌측 -->
+			<a class="col navbar-brand" href="home"> <img
+				src="../img/nav/carrier.jpg" alt="" class="mb-2"
+				style="width: 100px;"></a>
+			<!--M nav btn-->
+			<button class="col-2 ml-auto navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<!-- nav content -->
+			<div
+				class="px-0 col-8 d-lg-flex justify-content-between justify-content-lg-end mx-auto collapse navbar-collapse"
+				id="navbarSupportedContent">
+				<!-- nav 중앙 -->
+				<div class="col-12 col-md-6 flex-grow-1 px-lg-5">
+					<ul
+						class="px-lg-5 mb-0 navbar-nav justify-content-around mb-lg-0 f17 px-4 bg-white rounded-bottom ">
+						<li class="nav-item"><a class="nav-link" aria-current="page"
+							href="home">홈</a></li>
+						<li class="nav-item"><a class="nav-link" href="feed">피드</a></li>
+						<li class="nav-item"><a class="nav-link" href="aicc">AI
+								돋보기</a></li>
+						<li class="nav-item"><a class="nav-link" href="band">밴드</a></li>
+						<li class="nav-item dropdown"><a class="nav-link" href="info"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">여행정보</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="info">여행정보</a></li>
+								<li><a class="dropdown-item" href="infoCourse">여행코스</a></li>
+							</ul></li>
+						<li class="nav-item"><a class="nav-link mb-3 mb-md-0"
+							href="map">지도</a></li>
+						<th:block th:if="${session.Member_Id == null}">
+							<li class="nav-item d-md-none"><a
+								class="nav-link mb-3 mb-md-0" href="로그인">로그인</a></li>
+						</th:block>
+						<th:block th:unless="${session.Member_Id == null}">
+							<li class="nav-item d-md-none"><a
+								class="nav-link mb-3 mb-md-0" href="마이페이지">마이페이지</a></li>
+						</th:block>
+					</ul>
+				</div>
+				<!-- nav 우측 -->
+				<div class="col nav-right d-flex align-items-center p-0 me-2">
+					<!-- lg 화면 이상에서 보일 영역 -->
+					<div
+						class="col-12 d-none d-xl-flex justify-content-around align-items-center p-0 me-2">
+						<!-- 서치 영역-->
+						<div class="col-10 float-end nav-search-form">
+							<form action="info_search" class="d-flex align-items-center"
+								role="search">
+								<input class="form-control" type="search"
+									placeholder="어디로, 어떤 여행을 떠날 예정인가요?" aria-label="Search"
+									name="key">
+								<button class="nav-right-btn navbar-search-lg" type="submit">Search</button>
+							</form>
+						</div>
+						<!----- 로그인 / 마이페이지 영역 ----->
+						<!-- 로그인 -->
+						<th:block th:if="${session.Member_Id == null}">
+							<a th:href="@{login}"
+								class="float-end navbar-user nav-right-btn nav-right-btn-img">로그인</a>
+						</th:block>
+						<!-- 마이페이지 -->
+						<th:block th:unless="${session.Member_Id == null}">
+							<a th:href="@{'mypage?id='+${session.Member_Id}}"
+								class="nav-right-btn"> <img
+								th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
+								class="rounded-circle img-fluid nav-right-btn-img float-end"
+								alt="...">
+							</a>
+						</th:block>
+					</div>
+					<!-- md 화면에서만 보일 영역 -->
+					<div class="d-flex">
+						<div class="col d-none d-md-block d-xl-none">
+							<!----- 로그인 / 마이페이지 영역 ----->
+							<!-- 로그인 -->
+							<th:block th:if="${session.Member_Id == null}">
+								<a th:href="@{login}"
+									class="float-end nav-right-btn nav-right-btn-img navbar-user">로그인</a>
+							</th:block>
+							<!-- 마이페이지 -->
+							<th:block th:unless="${session.Member_Id == null}">
+								<a th:href="@{'mypage?id='+${session.Member_Id}}"
+									class="float-end nav-right-btn"> <img
+									th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
+									class="rounded-circle img-fluid nav-right-btn-img float-end"
+									alt="...">
+								</a>
+							</th:block>
+							<!-- 검색 -->
+							<a href="#" class="float-end nav-right-btn"
+								data-bs-toggle="modal" data-bs-target="#exampleModal"> <span
+								class="navbar-search-md nav-right-btn-img me-2 " id="searchmove">
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+							</span>
+							</a>
+							<!-- Modal -->
+							<div class="modal " id="exampleModal" tabindex="-1"
+								aria-labelledby="exampleModalLabel" aria-hidden="false">
+								<div class="modal-dialog modal-fullscreen-sm-down">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h1 class="modal-title fs-5" id="exampleModalLabel">어디로,
+												어떤 여행을 떠날 예정인가요?</h1>
+											<button type="button" class="btn-close"
+												data-bs-dismiss="modal" aria-label="Close"></button>
+										</div>
+										<form action="info_search" class="d-flex align-items-center"
+											role="search">
+											<div class="modal-body">
+												<input class="form-control" type="search"
+													placeholder="검색어를 입력해주세요" aria-label="Search" name="key">
+											</div>
+											<div class="modal-footer">
+												<button type="submit" class="btn btn-nb">검색하기</button>
+
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</nav>
+
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+		crossorigin="anonymous"></script>
 </body>
 </html>
