--- a/src/main/resources/templates/thymeleaf/Member/FindId_Result.html
+++ b/src/main/resources/templates/thymeleaf/Member/FindId_Result.html
@@ -11,7 +11,7 @@
 		<div class="col-md-8 col-lg-7 col-xl-6 mx-auto my-5 gap-2">
 			<input type="hidden" name="Member_Id" th:value="${param.Member_Id}" />
 			<div
-				class="row g-3 addMember_form p-4 rounded-5 shadow-sm my-5 p-5 text-center">
+				class="row g-3 addMember_form p-4 rounded-5 shadow-s my-5 p-5 text-center">
 				<img src="../img/mypage/lock.png" alt=""
 					class="img-fluid w-25 m-auto mb-2" />
 				<div class="mb-3">
