--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -95,15 +95,14 @@ nav input[type=search] {
 nav .navbar-toggler {
    border: none;
 }   
- .modal-backdrop {
-    --bs-backdrop-zindex: 1050;
+.modal-backdrop {
+	--bs-backdrop-zindex: 1050;
     --bs-backdrop-bg: #000000;
-    --bs-backdrop-opacity: 0.1;
-    position: fixed;
+	--bs-backdrop-opacity: 0.1;
+	position: fixed;
     top: 0;
     left: 0;
-    z-index: 0;
     width: 100vw;
     height: 100vh;
-    background-color: var(--bs-backdrop-bg);
-} 
+	/* background-color: var(--bs-backdrop-bg); */
+}
