--- a/src/main/resources/templates/alert/del_modal.html
+++ b/src/main/resources/templates/alert/del_modal.html
@@ -12,10 +12,7 @@
 				<button type="button"
 					class="btn btn-light text-dark rounded-pill px-3"
 					data-bs-dismiss="modal">취소</button>
-				<button type="button" class="btn btn-main rounded-pill px-3">
-					<a class="dropdown-item active"
-						th:href="@{'/delFeed?num='+${feed.Feed_num}}">삭제</a>
-				</button>
+				<button type="button" class="btn btn-main rounded-pill px-3" th:fragment="modalButton">삭제</button>
 			</div>
 		</div>
 	</div>
