--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -27,8 +27,8 @@
 		<!-- 반복 되는 형태 -->
 		<div class="row mb-5">
 			<div class="col text-center">
-				<h3 class="my-5 highlight d-inline-block">
-					[<span th:text="${view.getEvent_category()}">버튼</span>] 
+				<h3 class="my-5">
+					<span class="highlight" th:text="| [ ${view.getEvent_category()} ] |">버튼</span>
 					<span
 						th:text="${view.getEvent_title()}"></span>
 				</h3>
