24-03-01 | 박검지 | Design: aicc favicon 추가

--- a/src/main/resources/templates/thymeleaf/aicc/aicc.html
+++ b/src/main/resources/templates/thymeleaf/aicc/aicc.html
@@ -13,6 +13,8 @@
 <link rel="stylesheet" href="../css/ai.css">
 <link rel="stylesheet" href="../css/nav.css">
 <link rel="stylesheet" href="../css/footer.css">
+<!-- favicon -->
+<link rel="icon" sizes="57x57" href="../img/favicon/carrier_57x57.png">
 </head>
 <body>
    <div th:replace="~{nav/nav::nav}"></div>
