--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -13,13 +13,16 @@
 <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-	<nav
+	
+	<nav class="mt-3 mb-0 sticky-top" th:fragment="nav">
+		<div id="nav" class="p-0 m-auto row container-fluid px-0 navbar navbar-expand-md d-flex justify-content-center  bg-white shadow-sm">
+<!-- 	<nav
 		class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white shadow-sm"
 		th:fragment="nav">
-		<div class="row container-fluid px-0">
+		<div class="row container-fluid px-0 "> -->
 			<!-- Logo 좌측 -->
-			<a class="col navbar-brand" href="home"> <img
-				src="../img/nav/carrier.jpg" alt="" class="mb-2"
+			<a class="col navbar-brand hstack" href="home"> <img
+				src="../img/nav/carrier.jpg" alt="" class="my-auto"
 				style="width: 100px;"></a>
 			<!--M nav btn-->
 			<button class="col-2 ml-auto navbar-toggler" type="button"
@@ -116,8 +119,9 @@
 
 							</span>
 							</a>
+
 							<!-- Modal -->
-							<div class="modal " id="exampleModal" tabindex="-1"
+							<!-- <div class="modal " id="exampleModal" tabindex="-1"
 								aria-labelledby="exampleModalLabel" aria-hidden="false">
 								<div class="modal-dialog modal-fullscreen-sm-down">
 									<div class="modal-content">
@@ -140,18 +144,82 @@
 										</form>
 									</div>
 								</div>
+							</div> -->
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div th:insert="~{alert/toast::div}"></div>
+		<!-- Modal -->
+		<div class="modal fade" id="exampleModal" tabindex="-1"
+			aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content rounded-4 shadow-m border-0 search-modal px-3 pb-5">
+					<div class="modal-header border-0">
+						<span>어떤 여행을 떠날 예정인가요?</span>
+						<button type="button" class="btn-close" data-bs-dismiss="modal"
+							aria-label="Close"></button>
+					</div>
+					<div class="modal-body text-center">
+						<input class="form-control rounded-3 py-3 ps-5 f17" type="search" placeholder="검색어를 입력해주세요" aria-label="Search" name="key">
+						<i class="fi fi-br-search position-absolute"></i>
+					</div>
+					<div class="modal-footer border-0 text-start pt-0 px-3 f15">
+						<p class="me-auto m-0 mb-3">추천 페이지</p>
+						<div class="px-2 w-100 row gap-4">
+							<a href="/map">
+								<p class="f16 fw-bold mb-1">주변 여행지</p>
+								<span class="f14 px-3 d-block"><span class="text-muted">지도&nbsp;&nbsp;/&nbsp;&nbsp;</span>주변 여행지</span>
+							</a>
+							<a href="/aicc">
+								<p class="f16 fw-bold mb-1">맞춤 여행</p>
+								<span class="f14 px-3 d-block"><span class="text-muted">AI돋보기&nbsp;&nbsp;/&nbsp;&nbsp;</span>원하는 여행 고르기</span>
+							</a>
+							<a href="/band">
+								<p class="f16 fw-bold mb-1">내 밴드</p>
+								<span class="f14 px-3 d-block"><span class="text-muted">밴드&nbsp;&nbsp;/&nbsp;&nbsp;</span>가입한 밴드</span>
+							</a>
+							<div th:if="${session.Member_Id}==null" onclick="showToast()" style="cursor: pointer;">
+							    <p class="f16 fw-bold mb-1">보관함</p>
+							    <span class="f14 px-3 d-block"><span class="text-muted">마이페이지&nbsp;&nbsp;/&nbsp;&nbsp;</span>보관함</span>
+							</div>
+							<div th:unless="${session.Member_Id}==null">
+								<a href="/mypage">
+									<p class="f16 fw-bold mb-1">보관함</p> <span
+									class="f14 px-3 d-block"><span class="text-muted">마이페이지&nbsp;&nbsp;/&nbsp;&nbsp;</span>보관함</span>
+								</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
+		
+		<!-- 알림창 -->
+		<script type="text/javascript">
+		    // showToast 함수 정의
+		    function showToast() {
+		        let message = "로그인이 필요한 서비스입니다.";
+		        $('.my-toast-body').text(message);
+		        $('.my-toast').toast('show');
+		    }
+		
+		    // 문서가 준비되면 호출되는 함수
+		    $(document).ready(function() {
+		        // 버튼 클릭 이벤트 핸들러 등록
+		        $('#showToastBtn').click(function() {
+		            showToast(); // showToast 함수 호출
+		        });
+		    });
+		</script>
 	</nav>
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
+		
+
 </body>
 </html>
