--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -15,41 +15,41 @@ a {
 	color: var(--black);
 }
 
-.text-muted{
-	color: var(--deepgray)!important;
+.text-muted {
+	color: var(--deepgray) !important;
 }
 
-.fw-normal{
+.fw-normal {
 	font-weight: 300 !important;
 }
-
 
 a.indent {
 	text-indent: -9999px;
 	font-size: 0;
 }
 
-.shadow-s{
-	box-shadow: 2px 2px 20px rgba(0,0,0,.06), 2px 2px 10px rgba(0,0,0,.04);
+.shadow-s {
+	box-shadow: 2px 2px 20px rgba(0, 0, 0, .06), 2px 2px 10px
+		rgba(0, 0, 0, .04);
 }
 
-.shadow-m{
-	box-shadow: 2px 5px 40px 0 rgba(0,0,0,.09);
+.shadow-m {
+	box-shadow: 2px 5px 40px 0 rgba(0, 0, 0, .09);
 }
 
-.text-dark{
+.text-dark {
 	color: var(--black);
 }
 
-.text-black{
+.text-black {
 	color: var(--darkBlack);
 }
 
-.text-pink{
+.text-pink {
 	color: var(--nottedDeepPink);
 }
 
-.highlight{
+.highlight {
 	padding: 0 15px;
 	box-shadow: inset 0 -12px 0 var(--main);
 }
@@ -105,14 +105,13 @@ a.indent {
 	font-size: 22px;
 }
 
-
 /* background-color 버튼 색상 정의 */
 .btn-outline-dark:hover span, .btn-outline-dark:hover a {
 	text-decoration: none;
 	color: var(--white);
 }
 
-.bg-main, .btn-main-over:hover{
+.bg-main, .btn-main-over:hover {
 	background-color: var(--main) !important;
 }
 
@@ -126,7 +125,7 @@ a.indent {
 }
 
 .bg-nb {
-	background-color: var(--nottedblue)!important;
+	background-color: var(--nottedblue) !important;
 }
 
 .bg-pink {
@@ -145,8 +144,8 @@ a.indent {
 	background-color: var(--nottedbrown) !important;
 }
 
-.bg-trans{
-	background: rgba(255,255,255,0);
+.bg-trans {
+	background: rgba(255, 255, 255, 0);
 }
 
 /* BTN 버튼 색상 정의 */
@@ -154,8 +153,13 @@ a.indent {
 	background-color: var(--main) !important;
 }
 
-.btn-nb {
+.btn-nb, .btn-nb-over:hover {
 	background-color: var(--nottedblue) !important;
+}
+
+.btn-nb:over, .btn-nb-over {
+	border: 2px solid var(--nottedblue) !important;
+	background-color: var(--white) !important;
 }
 
 .btn-pink {
@@ -187,7 +191,7 @@ a.indent {
 .form-label {
 	color: var(--black);
 }
-/* input, .form-control {
-	color: var(--deepgray);
-} */
 
+.z-index{
+	z-index: 1055;
+}
