--- a/src/main/resources/templates/alert/pay_modal.html
+++ b/src/main/resources/templates/alert/pay_modal.html
@@ -3,12 +3,12 @@
 	<button type="button" class="btn btn-main rounded-pill px-2"
 		data-bs-toggle="modal" data-bs-target="#feed_del_Modal">자세히보기</button>
 
-	<!-- DEL Modal -->
+	<!-- Pay Modal -->
 	<div class="modal fade bg-trans" id="feed_del_Modal" tabindex="-1"
 		aria-labelledby="feed_del_ModalLabel" aria-hidden="true">
 		<div
 			class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-			<div class="modal-content rounded-4 border-none bg-trans overflow">
+			<div class="modal-content rounded-4 border-none bg-trans overflow shadow-s">
 				<!-- X btn -->
 				<img data-bs-dismiss="modal" aria-label="Close"
 					src="../img/mypage/del.png"
