--- a/src/main/resources/templates/thymeleaf/Member/mypage.html
+++ b/src/main/resources/templates/thymeleaf/Member/mypage.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-12 p-3 mb-4">
 						<p class="f22 m-0">
-							<span th:text="${loginMember.getMember_Name()}">사용자이름</span> 님
+							<span class="fw-bolder" th:text="${loginMember.getMember_Name()}">사용자이름</span> 님
 						</p>
 						<a th:href="@{logout}"
 							class="text-decoration-none text-dark d-block p-2 f14">로그아웃</a>
