24-03-03 | 박검지 | Fix: feed update시간 n시간 전으로 변경하기

--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -223,9 +223,10 @@
 						<!--feed box text-->
 						<div class="col px-0">
 							<span class="float-start fw-bold f15" th:text="${feed.Member_Id}">박검지</span><br>
-							<span class="float-start text-muted f13">하이라이트</span><span
-								class="float-start text-muted f13 ms-3 recentSort"
-								th:text="${feed.getFeed_uploadday()}">2시간 전</span>
+							<span class="float-start text-muted f13">하이라이트</span>
+							<span class="float-start text-muted f13 ms-3 recentSort" th:text="${@com.ex.springboot.controller.Time@calculateTime(feed.getFeed_uploadday())}"></span>
+
+
 						</div>
 						<!-- 우측 버튼 -->
 						<div class="col-3 d-flex justify-content-end align-items-center">
